--- a/src/Header.css
+++ b/src/Header.css
@@ -5,7 +5,7 @@ header {
   background: #e0ba11; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #cc02ff,
+    #02ff96,
     #b403fa
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
