--- a/src/MemeGenerator.css
+++ b/src/MemeGenerator.css
@@ -30,7 +30,7 @@ header > p {
 
 .meme {
   position: relative;
-  width: 90%;
+  width: 40%;
   margin: auto;
 }
 
@@ -65,7 +65,7 @@ header > p {
 }
 
 .meme-form {
-  width: 90%;
+  width: 40%;
   margin: 20px auto;
   display: flex;
   justify-content: space-between;
@@ -88,6 +88,7 @@ header > p {
 button {
   display: block;
   height: 30px;
-  margin-top: 1px;
-  margin-bottom: 10px;
+  margin: 10px auto;
+  display: block;
+  justify-content: space-between;
 }
