updates save function and save css

--- a/src/MemeGenerator.css
+++ b/src/MemeGenerator.css
@@ -86,9 +86,7 @@ header > p {
 }
 
 .img-button {
+  width: 40%;
+  margin: 1px auto;
   display: block;
-  height: 30px;
-  margin: 10px auto;
-  display: block;
-  justify-content: space-between;
 }
